--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -70,11 +70,15 @@
     </div>
 
     <div class="call_to_action_bar">
-      <div class="CTA_quote">Call to action! It's time!</div>
-      <div class="CTA_description">
-        Sign up for our product by clicking that button right over there!
+      <div class="text_button">
+        <div class="cta_text">
+          <div class="CTA_quote">Call to action! It's time!</div>
+          <div class="CTA_description">
+            Sign up for our product by clicking that button right over there!
+          </div>
+        </div>
+        <div class="sign_up_button"><a href="#">Sign up</a></div>
       </div>
-      <div class="sign_up_button"><a href="#">Sign up</a></div>
     </div>
 
     <div class="footer">Copyright The Odin Project 2021</div>
